  EntityCriteria, added support for limit/offset
  EntityDefinition, added having clause
  ClientUserMonitor now logs errors occurring during the refresh of user history
  build.xml, bug fixed, jminor-server-monitor.jar target did not include EntityConnectionServerAdminImpl_Stub.class
  build.xml, removed redundant domain package from jminor-server-monitor.jar
  build.xml, minor changes to deploy_server_monitor and deploy_generator targets
  ClientUserMonitor refactoring
  FilteredTableModel.sortContents() added, implemented in AbstractFilteredTableModel
  DefaultEntityConnection refactored, redundant select during update removed
  DefaultDatabaseConnection no longer validates connections received via constructor parameter
  build.xml, bug fixed, jminor-client.jar target did not include DefaultRemoteEntityConnection.class
  EntityLoadTestModel disables connection validation
  TomcatConnectionPoolProvider now sets testOnBorrow to true since JMinor no longer validates connections coming from a connection pool
  TableSortModel.getColumnClass() added
  AbstractTableSortModel.getColumnClass() removed
  AbstractFilteredTableModel now overrides getColumnClass(), delegating to the sort model
  DefaultEntityTableModel.getColumnClass() removed
  FilteredTablePanel now contains a base panel which contains the JScrollPane containing the JTable
  EntityTablePanel.layoutPanel() simplified
  ClientUserMonitor and ClientUserMonitorPanel refactoring
  DefaultEntityConnection, getSelectSQL() refactored
  Copyright updated
  ClientUserMonitor bug fixed, user history table model did not sort correctly by 'last seen'
  EntityServerMonitorPanel now displays startup errors instead of simply exiting
  DefaultDatabaseConnection is no longer extended, made final
  DatabaseConnection.query() removed
  DatabaseConnection.getMethodLogger() added
  DefaultDatabaseConnection.query() moved to DatabaseUtil
  UiUtil.setPreferredWidth() added, tested